# llm-workers

./: .gitignore  AGENTS.md  CLAUDE.md  LLM Scipt.md  LLM Script.md  MCP_INTEGRATION.md  MeetingNotes.yaml  MetacriticMonkey.yaml  MetacriticMonkeyTest.yaml  MetacriticMonkeyTestBak.yaml  NavigationInTurkey.yaml  README.md  meeting-notes.yaml  navigation-in-Turkey-idea.yaml  pyproject.toml
docs/: LLM Script.md  README.md  _config.yml  built-in-tools.md  custom-tools.md  evaluation.md  examples.md  index.md  llm-script.md  release-notes.md
docs/examples/: Metacritic-monkey.yaml  explicit-approval-tools.yaml  find-concurrency-bugs.yaml  mcp-example.yaml  navigation-planning.yaml  reformat-Scala-instructions.md  reformat-Scala.yaml  starlark-demo.yaml  toolkit-example.yaml
examples/: Metacritic-monkey.yaml  MetacriticMonkey.yaml  NavigationInTurkey.yaml  coding-assistant.yaml  explicit-approval-tools.yaml  find-concurrency-bugs.yaml  investigation-assistant.yaml  mcp-example.yaml  meeting-notes.yaml  navigation-planning.yaml  reformat-Scala.yaml  using-context-help-tool.yaml
llm_workers/: api.py  chat.py  cli.py  config.py  context.py  fetch_url_tools.py  llm.py  utils.py  worker.py
llm_workers/tools/: custom_tool.py  custom_tools_base.py  debug_tool.py  fetch.py  fetch_tools.py  file.py  llm_tool.py  registry.py  stub_tool.py  t2_ai_wrapper.py  tool_binding.py  tool_registry.py  transcribe.py  transcribe_common.py  transcribe_pyannote.py  transcribe_whisper_cpp.py  utils.py  whisper_cpp.py
scripts/: build-all.sh  clean-build.sh  llm-workers-chat.py  llm-workers-cli.py  main.py  publish-pypi.sh  publish-testpypi.sh  set-version.sh
src/llm_workers/: api.py  chat.py  cli.py  coding-assistant.yaml  config.py  console.py  console_stream.py  context.py  default-anthropic-models.yaml  default-openai-models.yaml  default-openai-old-models.yaml  expressions.py  generic-assistant.yaml  token_tracking.py  user_context.py  utils.py  worker.py  worker_utils.py  workers_context.py
src/llm_workers/tools/: custom_tool.py  fetch.py  fs.py  llm_tool.py  misc.py  unsafe.py
tests/: mocks.py  test.ipynb  test_approval_tools.py  test_chat_history.py  test_config.py  test_cost_calculation.py  test_custom_tool.py  test_custom_tool_config.py  test_evaluation.py  test_expressions.py  test_file_tools.py  test_llm_tool.py  test_llm_tool_json.py  test_mcp_expressions.py  test_module_loading.py  test_starlark.py  test_token_tracking.py  test_tool_importing.py  test_user_input_tool.py  test_utils.py  test_worker.py  transcribe.py
