[project]
name = "llm-workers-dev"
version = "1.0.0"
description = "Development meta-project for LLM Workers monorepo"
authors = [
    {name = "Dmitry Mikhaylov", email = "mikhailov.dmitry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "llm-workers",
    "llm-workers-console",
    "llm-workers-tools",
    "llm-workers-evaluation",
]

[project.urls]
Homepage = "https://mrbagheera.github.io/llm-workers/"
Issues = "https://github.com/MrBagheera/llm-workers/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = []
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
echo-mcp-server-for-testing = ">=0.1.5,<0.2.0"

[tool.poetry.dependencies]
llm-workers = {path = "packages/llm-workers", develop = true}
llm-workers-console = {path = "packages/llm-workers-console", develop = true}
llm-workers-tools = {path = "packages/llm-workers-tools", develop = true}
llm-workers-evaluation = {path = "packages/llm-workers-evaluation", develop = true}
